Fix overlapping tool-palettes

--- a/modules/web/scss/modules/ballerina-editor.scss
+++ b/modules/web/scss/modules/ballerina-editor.scss
@@ -19,6 +19,47 @@
                          10px 10px,
                          10px 10px;
     }
+
+    .view-source-btn, .view-design-btn {
+        float: left;
+        margin: 1px 5px 1px 5px;
+        font-size: 12px;
+    }
+    
+    .bottom-view-label {
+        font-size: 12px;
+        padding-left: 5px;
+        width:95px;
+    }
+    
+    .bottom-label-icon-wrapper{
+        width: 25px;
+        height: 25px;
+        float: left;
+        padding-left: 5px;
+        margin-top: 0;
+    }
+
+    .bottom-right-controls-container {
+        position: absolute;
+        bottom: 100px;
+        right: 30px;
+        z-index: 30;
+        background: $bottom-right-controls-bgcolor;
+        color: #fff;
+        padding: 0;
+        line-height: 30px;
+    }    
+    
+    .bottom-right-controls-container .btn-icon span {
+        font-size: 12px;
+        padding-left: 5px;
+        width:95px;
+    }
+    
+    .bottom-right-controls-container .btn-icon:hover:after {
+        opacity: 0.5
+    }    
     
     .panel {
         & .panel-header {
